pictures overflow on hover fixed

--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ main {
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
-    /* gap: 0.1rem; */
+    gap: 0.2rem;
     height: min-content;
     width: 100%;
 }
@@ -115,14 +115,15 @@ main {
 }
 
 .gallery-column img {
+    display: block;
     width: 100%;
     max-width: 100%;
-    scale: 1;
+    transform: scale(1);
     transition: all 1s ease-in-out;
 }
 
 .gallery-column img:hover {
-    scale: 1.5;
+    transform: scale(1.5);
 }
 
 .observer {
